--- a/Grid1.html
+++ b/Grid1.html
@@ -9,6 +9,8 @@
         /*EJEMPLO EN CLASE PARA CENTRAR CON GRID*/
         div{
             
+            height: 5rem;
+            width: 5rem;
         }
 
     </style>
